吧key的检查放到base来, 添加,更新前自动检查dtokey重复